--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
 	<footer class="site-footer">
 		<div class="container">
 			<div class="site-footer-inner">
-				<div class="footer-copyright">Copyright &copy; 2019 常州三笑通信息科技有限公司 <a href="http://www.beian.miit.gov.cn" target="_blank">苏ICP备19037191号-1</a></div>
+				<div class="footer-copyright">Copyright &copy; 2019 常州三笑通信息科技有限公司 . <a href="http://www.beian.miit.gov.cn" target="_blank"> 苏ICP备19037191号-1</a></div>
 			</div>
 		</div>
 	</footer>
